--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -13,7 +13,14 @@
                             <div class="d-flex justify-content-between align-items-start">
                                 <div class="d-flex flex-column">
                                     <div><b>{{'common.name' | translate}}:</b> {{element.name}}</div>
-                                    <div><b>{{'common.mobile' | translate}}:</b> {{element.mobile}}</div>
+                                    <div><b>{{'common.mobile' | translate}}:</b> 
+                                        <div class="d-flex">
+                                            {{element.mobile}}
+                                            <a href="javascript:void(0)" (click)="openWhatsApp(element.mobile)" class="px-2">
+                                                <i class="fa-brands fa-whatsapp whats-app-icon"></i>
+                                            </a>
+                                        </div>
+                                    </div>
                                     <div><b>{{'common.adultsCount' | translate}}:</b> {{element.adultsCount + 1}}</div>
                                     <div><b>{{'common.childrenCount' | translate}}:</b> {{element.childrenCount}}</div>
                                     <div> <b>{{'common.totalCost' | translate}}:</b>
@@ -123,8 +130,11 @@
         
                     <ng-container matColumnDef="mobile">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'table.mobile' | translate}}</th>
-                        <td mat-cell *matCellDef="let element">
+                        <td mat-cell *matCellDef="let element" class="width-135">
                             {{element.mobile}}
+                            <a href="javascript:void(0)" (click)="openWhatsApp(element.mobile)">
+                                <i class="fa-brands fa-whatsapp whats-app-icon"></i>
+                            </a>
                         </td>
                         <td mat-footer-cell *matFooterCellDef></td>
                     </ng-container>
