--- a/src/styles.scss
+++ b/src/styles.scss
@@ -320,7 +320,7 @@ mat-mdc-fab.mat-primary, .mat-mdc-mini-fab.mat-primary {
   position: fixed !important;
   top: 3px;
   left: 10px;
-  z-index: 10 !important;
+  z-index: 100 !important; // Not appear in IOS
   color: #fff !important;
 }
 
