--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -13,10 +13,11 @@
                             <div class="d-flex justify-content-between align-items-start">
                                 <div class="d-flex flex-column">
                                     <div><b>{{'common.name' | translate}}:</b> {{element.name}}</div>
-                                    <div><b>{{'common.mobile' | translate}}:</b> 
+                                    <div class="d-flex">
+                                        <b>{{'common.mobile' | translate}}:</b> 
                                         <div class="d-flex">
-                                            {{element.mobile}}
-                                            <a href="javascript:void(0)" (click)="openWhatsApp(element.mobile)" class="px-2">
+                                            <div class="px-2">{{element.mobile}}</div>
+                                            <a href="javascript:void(0)" (click)="openWhatsApp(element.mobile)">
                                                 <i class="fa-brands fa-whatsapp whats-app-icon"></i>
                                             </a>
                                         </div>
@@ -105,7 +106,7 @@
                                     </ng-container>
                                     <div>
                                         <button mat-icon-button color="primary" [matMenuTriggerFor]="menu">
-                                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                                            <i class="fa-solid fa-ellipsis"></i>
                                         </button>
                                         <mat-menu #menu="matMenu">
                                             <button mat-menu-item class="primary" (click)="update(element)">{{'common.edit' |
