--- a/src/app/admin/all-subscription/all-subscription.component.html
+++ b/src/app/admin/all-subscription/all-subscription.component.html
@@ -12,15 +12,30 @@
             <td mat-cell *matCellDef="let element" class="py-2">
               <div class="d-flex justify-content-between align-items-start">
                 <div>
+                  <div class="d-flex">
+                    <div [ngSwitch]="element.bookingStatus" class="mb-2">
+                      <div *ngSwitchCase="2">
+                        <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
+                      </div>
+                      <div *ngSwitchCase="3">
+                        <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}</div>
+                      </div>
+                      <div *ngSwitchCase="4">
+                        <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}</div>
+                      </div>
+                      <div *ngSwitchDefault>
+                        <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
+                      </div>
+                    </div>
+                    <span class="mx-2">
+                      <mat-icon *ngIf="element.isChild" color="primary">child_care</mat-icon>
+                      <mat-icon *ngIf="element.isMain" color="primary">star</mat-icon>
+                    </span>
+                  </div>
                   <div><b>{{'common.name' | translate}}:</b> {{element.name}}</div>
                   <div class="d-flex">
-                    <b>{{'common.mobile' | translate}}:</b> 
-                    <div class="d-flex">
-                      <div class="px-2">{{ element.mobile }}</div>
-                      <a href="javascript:void(0)" (click)="openWhatsApp(element.mobile)">
-                        <i class="fa-brands fa-whatsapp whats-app-icon"></i>
-                      </a>
-                    </div>
+                    <b>{{'common.mobile' | translate}}:</b>
+                    {{ element.mobile }}
                   </div>
                   <div><b>{{'common.birthDate' | translate}}:</b> {{ element.birthDate.toMillis() | date }}</div>
                   <div><b>{{'common.age' | translate}}:</b> {{element.age}}</div>
@@ -46,24 +61,8 @@
                   </div>
                 </div>
                 <div class="d-flex justify-content-between flex-column">
-                  <span class="mx-2">
-                    <mat-icon *ngIf="element.isChild" color="primary">child_care</mat-icon>
-                    <mat-icon *ngIf="element.isMain" color="primary">star</mat-icon>
-                  </span>
-                  <ng-container [ngSwitch]="element.bookingStatus">
-                    <div *ngSwitchCase="2">
-                      <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
-                    </div>
-                    <div *ngSwitchCase="3">
-                      <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}</div>
-                    </div>
-                    <div *ngSwitchCase="4">
-                      <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}</div>
-                    </div>
-                    <div *ngSwitchDefault>
-                      <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
-                    </div>
-                  </ng-container>
+                  
+                  <app-social-media [mobile]="element.mobile"></app-social-media>
                 </div>
               </div>
     
@@ -88,10 +87,10 @@
           <ng-container matColumnDef="mobile">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.mobile' | translate}}</th>
             <td mat-cell *matCellDef="let element" class="width-135">
-              {{ element.mobile }}
-              <a href="javascript:void(0)" (click)="openWhatsApp(element.mobile)">
-                <i class="fa-brands fa-whatsapp whats-app-icon"></i>
-              </a>
+              <div class="text-center">
+                <div>{{ element.mobile}}</div>
+                <app-social-media [mobile]="element.mobile"></app-social-media>
+              </div>
             </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
