--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -12,15 +12,29 @@
                         <td mat-cell *matCellDef="let element" class="py-2">
                             <div class="d-flex justify-content-between align-items-start">
                                 <div class="d-flex flex-column">
+                                    <div [ngSwitch]="element.bookingStatus" class="mb-2">
+                                        <div *ngSwitchCase="2">
+                                            <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}
+                                            </div>
+                                        </div>
+                                        <div *ngSwitchCase="3">
+                                            <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate
+                                                }}
+                                            </div>
+                                        </div>
+                                        <div *ngSwitchCase="4">
+                                            <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}
+                                            </div>
+                                        </div>
+                                        <div *ngSwitchDefault>
+                                            <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}
+                                            </div>
+                                        </div>
+                                    </div>
                                     <div><b>{{'common.name' | translate}}:</b> {{element.name}}</div>
                                     <div class="d-flex">
-                                        <b>{{'common.mobile' | translate}}:</b> 
-                                        <div class="d-flex">
-                                            <div class="px-2">{{element.mobile}}</div>
-                                            <a href="javascript:void(0)" (click)="openWhatsApp(element.mobile)">
-                                                <i class="fa-brands fa-whatsapp whats-app-icon"></i>
-                                            </a>
-                                        </div>
+                                        <b>{{'common.mobile' | translate}}:</b>
+                                        {{element.mobile}}
                                     </div>
                                     <div><b>{{'common.adultsCount' | translate}}:</b> {{element.adultsCount + 1}}</div>
                                     <div><b>{{'common.childrenCount' | translate}}:</b> {{element.childrenCount}}</div>
@@ -84,26 +98,7 @@
                                         </ng-container>
                                     </div>
                                 </div>
-                                <div class="d-flex flex-column-reverse">
-                                    <ng-container [ngSwitch]="element.bookingStatus">
-                                        <div *ngSwitchCase="2">
-                                            <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}
-                                            </div>
-                                        </div>
-                                        <div *ngSwitchCase="3">
-                                            <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate
-                                                }}
-                                            </div>
-                                        </div>
-                                        <div *ngSwitchCase="4">
-                                            <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}
-                                            </div>
-                                        </div>
-                                        <div *ngSwitchDefault>
-                                            <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}
-                                            </div>
-                                        </div>
-                                    </ng-container>
+                                <div class="d-flex flex-column">
                                     <div>
                                         <button mat-icon-button color="primary" [matMenuTriggerFor]="menu">
                                             <i class="fa-solid fa-ellipsis"></i>
@@ -115,6 +110,7 @@
                                                 (click)="delete(element)">{{'common.delete' | translate}}</button>
                                         </mat-menu>
                                     </div>
+                                    <app-social-media [mobile]="element.mobile"></app-social-media>
                                 </div>
                             </div>
                         </td>
@@ -132,10 +128,10 @@
                     <ng-container matColumnDef="mobile">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'table.mobile' | translate}}</th>
                         <td mat-cell *matCellDef="let element" class="width-135">
-                            {{element.mobile}}
-                            <a href="javascript:void(0)" (click)="openWhatsApp(element.mobile)">
-                                <i class="fa-brands fa-whatsapp whats-app-icon"></i>
-                            </a>
+                            <div class="text-center">
+                                <div>{{element.mobile}}</div>
+                                <app-social-media [mobile]="element.mobile"></app-social-media>
+                            </div>
                         </td>
                         <td mat-footer-cell *matFooterCellDef></td>
                     </ng-container>
