--- a/src/app/admin/all-subscription/all-subscription.component.html
+++ b/src/app/admin/all-subscription/all-subscription.component.html
@@ -61,13 +61,19 @@
                   </div>
                 </div>
                 <div class="d-flex justify-content-between flex-column">
-                  
                   <app-social-media [mobile]="element.mobile"></app-social-media>
                 </div>
               </div>
     
             </td>
-            <td mat-footer-cell *matFooterCellDef>{{'common.total' | translate}}: <b>{{total}}</b> </td>
+            <td mat-footer-cell *matFooterCellDef class="px-0">
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="pr-3">{{'common.total' | translate}}: <b>{{total}}</b></div>
+                <button mat-icon-button color="primary" class="d-flex justify-content-center align-items-center" (click)="openExportModal()">
+                  <i class="fa-solid fa-download font-size-18"></i>
+                </button>
+              </div>
+            </td>
           </ng-container>
   
           <ng-container matColumnDef="name">
@@ -177,7 +183,11 @@
                 </button>
             </th>
             <td mat-cell *matCellDef="let element"></td>
-            <td mat-footer-cell *matFooterCellDef></td>
+            <td mat-footer-cell *matFooterCellDef>
+              <button mat-icon-button color="primary" class="d-flex justify-content-center align-items-center" (click)="openExportModal()">
+                <i class="fa-solid fa-download font-size-18"></i>
+              </button>
+            </td>
         </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
