--- a/src/app/admin/reservation/booking-successfully/booking-successfully.component.html
+++ b/src/app/admin/reservation/booking-successfully/booking-successfully.component.html
@@ -6,7 +6,7 @@
 </div>
 <div mat-dialog-content>
     <div class="px-0 py-3">
-        <img src="assets/images/successful.png" alt="img" loading="lazy" />
+        <i class="fa-solid fa-circle-check check-icon"></i>
         <div class="pt-3 text-success">{{'notifications.bookedSuccessfully' | translate}}</div>
     </div>
 </div>
