--- a/src/app/admin/reservation/booking-successfully/booking-successfully.scss
+++ b/src/app/admin/reservation/booking-successfully/booking-successfully.scss
@@ -1,4 +1,8 @@
 .mat-mdc-dialog-content {
-    background-color: #001929;
     text-align: center;
+}
+
+.check-icon {
+    color: green;
+    font-size: 85px;
 }
