--- a/src/app/admin/primary/cost-details/cost-details.component.html
+++ b/src/app/admin/primary/cost-details/cost-details.component.html
@@ -38,7 +38,7 @@
                         </div>
                     </td>
                     <td mat-footer-cell *matFooterCellDef>
-                        التكلفة الكلية: <b>{{total}}</b>
+                        التكلفة الكلية: <b>{{total}} جنيه</b>
                     </td>
                 </ng-container>
 
@@ -52,7 +52,7 @@
                         </div>
                     </td>
                     <td mat-footer-cell *matFooterCellDef>
-                        التكلفة الكلية: <b>{{total}}</b>
+                        التكلفة الكلية: <b>{{total}} جنيه</b>
                     </td>
                 </ng-container>
 
