--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -116,7 +116,7 @@
                         </td>
                         <td mat-footer-cell *matFooterCellDef class="px-0">
                             <div class="d-flex justify-content-between align-items-center">
-                                <div class="pr-3">{{'common.total' | translate}}: <b>{{model.dataSource.data.length}}</b></div>
+                                <div class="pr-3">{{'common.total' | translate}}: <b>{{model.total}}</b></div>
                                 <button mat-icon-button color="primary" class="d-flex justify-content-center align-items-center" (click)="openExportModal()">
                                   <i class="fa-solid fa-download font-size-18"></i>
                                 </button>
@@ -129,7 +129,7 @@
                         <td mat-cell *matCellDef="let element" class="width-175">
                             {{element.name}}
                         </td>
-                        <td mat-footer-cell *matFooterCellDef>{{'common.total' | translate}}: <b>{{model.dataSource.data.length}}</b> </td>
+                        <td mat-footer-cell *matFooterCellDef>{{'common.total' | translate}}: <b>{{model.total}}</b> </td>
                     </ng-container>
         
                     <ng-container matColumnDef="mobile">
