fix advanced filter issue

--- a/src/app/admin/advanced-search/advanced-search.component.html
+++ b/src/app/admin/advanced-search/advanced-search.component.html
@@ -91,7 +91,7 @@
         </ng-container>
     </div>
 </form>
-<div class="d-flex justify-content-lg-around justify-content-end align-items-center w-100 border-top pt-3">
+<div class="d-flex justify-content-lg-around justify-content-end align-items-center w-100 border-top pt-3 filter-footer">
     <button color="primary" mat-flat-button type="submit" cdkFocusInitial (click)="filter()">
         <span> {{ 'advancedFilter.filter' | translate }}</span>
     </button>
